--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        compile "com.esotericsoftware:kryo:3.0.3"
+        compile group: 'com.esotericsoftware', name: 'kryonet', version: '2.22.0-RC1'
         
     }
 }
@@ -59,6 +61,10 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+        compile "com.esotericsoftware:kryo:3.0.3"
+        compile group: 'com.esotericsoftware', name: 'kryonet', version: '2.22.0-RC1'
+        testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+        testCompile group: 'junit', name: 'junit', version: '4.12'
         
     }
 }
